# openwrt-thingworx

./: README.md
pkg/openwrt/tw-c-client-mini/: Makefile
pkg/openwrt/tw-c-client-mini/src/: CMakeLists.txt  main.c  util.c
pkg/openwrt/tw-c-sdk/: Makefile
pkg/openwrt/tw-c-sdk/patches/: 001-openssl.patch
